使用虚拟线程替代线程